// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/progress/demo/circle.md correctly 1`] = `
<div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#108ee9"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:221.48228207808043px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        75%
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-exception ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#ff5500"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:206.7167966062084px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        <i
          class="anticon anticon-cross"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-success ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#87d068"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        <i
          class="anticon anticon-check"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="check"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M328 799.7c-1.8 0-3.5-.1-5.3-.4-12.4-1.7-23.2-9-29.4-19.8L134 500.8c-11-19.2-4.3-43.6 14.9-54.6s43.6-4.3 54.6 14.9l133.2 233.2 491-492.5c15.6-15.6 40.9-15.7 56.6-.1 15.6 15.6 15.7 40.9.1 56.6L358.2 786.1l-1.9 1.9c-7.6 7.6-17.8 11.7-28.3 11.7z"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/circle-dynamic.md correctly 1`] = `
<div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#108ee9"
          stroke-linecap="round"
          stroke-width="0"
          style="stroke-dasharray:0px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        0%
      </span>
    </div>
  </div>
  <div
    class="ant-btn-group"
  >
    <button
      class="ant-btn ant-btn-icon-only"
      type="button"
    >
      <i
        class="anticon anticon-minus"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="minus"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M796.5 548h-569c-19.9 0-36-16.1-36-36s16.1-36 36-36h569c19.9 0 36 16.1 36 36s-16.1 36-36 36z"
          />
        </svg>
      </i>
    </button>
    <button
      class="ant-btn ant-btn-icon-only"
      type="button"
    >
      <i
        class="anticon anticon-plus"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="plus"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M866.5 476H548V165.5c0-19.9-16.1-36-36-36s-36 16.1-36 36V476H164.5c-19.9 0-36 16.1-36 36s16.1 36 36 36H476v311.5c0 19.9 16.1 36 36 36s36-16.1 36-36V548h318.5c19.9 0 36-16.1 36-36s-16.1-36-36-36z"
          />
        </svg>
      </i>
    </button>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/circle-mini.md correctly 1`] = `
<div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:80px;height:80px;font-size:18px"
    >
      <svg
        class="ant-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#108ee9"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:88.59291283123217px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        30%
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-exception ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:80px;height:80px;font-size:18px"
    >
      <svg
        class="ant-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#ff5500"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:206.7167966062084px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        <i
          class="anticon anticon-cross"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-success ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:80px;height:80px;font-size:18px"
    >
      <svg
        class="ant-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#87d068"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        <i
          class="anticon anticon-check"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="check"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M328 799.7c-1.8 0-3.5-.1-5.3-.4-12.4-1.7-23.2-9-29.4-19.8L134 500.8c-11-19.2-4.3-43.6 14.9-54.6s43.6-4.3 54.6 14.9l133.2 233.2 491-492.5c15.6-15.6 40.9-15.7 56.6-.1 15.6 15.6 15.7 40.9.1 56.6L358.2 786.1l-1.9 1.9c-7.6 7.6-17.8 11.7-28.3 11.7z"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/dashboard.md correctly 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div
    class="ant-progress-inner"
    style="width:120px;height:120px;font-size:24px"
  >
    <svg
      class="ant-progress-circle "
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,47
     a 47,47 0 1 1 0,-94
     a 47,47 0 1 1 0,94"
        fill-opacity="0"
        stroke="#f3f3f3"
        stroke-width="6"
        style="stroke-dasharray:220.30970943744057px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,47
     a 47,47 0 1 1 0,-94
     a 47,47 0 1 1 0,94"
        fill-opacity="0"
        stroke="#108ee9"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray:165.23228207808043px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
      />
    </svg>
    <span
      class="ant-progress-text"
    >
      75%
    </span>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/dynamic.md correctly 1`] = `
<div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:0%;height:8px;border-radius:100px"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        0%
      </span>
    </div>
  </div>
  <div
    class="ant-btn-group"
  >
    <button
      class="ant-btn ant-btn-icon-only"
      type="button"
    >
      <i
        class="anticon anticon-minus"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="minus"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M796.5 548h-569c-19.9 0-36-16.1-36-36s16.1-36 36-36h569c19.9 0 36 16.1 36 36s-16.1 36-36 36z"
          />
        </svg>
      </i>
    </button>
    <button
      class="ant-btn ant-btn-icon-only"
      type="button"
    >
      <i
        class="anticon anticon-plus"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="plus"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M866.5 476H548V165.5c0-19.9-16.1-36-36-36s-36 16.1-36 36V476H164.5c-19.9 0-36 16.1-36 36s16.1 36 36 36H476v311.5c0 19.9 16.1 36 36 36s36-16.1 36-36V548h318.5c19.9 0 36-16.1 36-36s-16.1-36-36-36z"
          />
        </svg>
      </i>
    </button>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/format.md correctly 1`] = `
<div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#108ee9"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:221.48228207808043px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        75 Days
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-success ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#87d068"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        Done
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/line.md correctly 1`] = `
<div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:30%;height:8px;border-radius:100px"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        30%
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-active ant-progress-show-info ant-progress-default"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:50%;height:8px;border-radius:100px"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        50%
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-exception ant-progress-show-info ant-progress-default"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:70%;height:8px;border-radius:100px"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        <i
          class="anticon anticon-cross-circle"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-default"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:100%;height:8px;border-radius:100px"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        <i
          class="anticon anticon-check-circle"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="check-circle"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 0C229.2 0 0 229.2 0 512s229.2 512 512 512 512-229.2 512-512S794.8 0 512 0zm260.3 356.4L412.8 717.1l-.4.4c-2.4 2.6-5.3 4.9-8.5 6.7-5.6 3.2-11.8 4.7-17.8 4.7-12.5 0-24.7-6.5-31.3-18.2L245.9 520.3C236 503 242 481 259.3 471.2c17.3-9.9 39.3-3.9 49.1 13.4l85.4 149.5 327.5-328.5c14-14.1 36.8-14.1 50.9-.1 14.1 14.1 14.1 36.9.1 50.9z"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:50%;height:8px;border-radius:100px"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/line-mini.md correctly 1`] = `
<div
  style="width:170px"
>
  <div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-small"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:30%;height:6px;border-radius:100px"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        30%
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-active ant-progress-show-info ant-progress-small"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:50%;height:6px;border-radius:100px"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        50%
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-exception ant-progress-show-info ant-progress-small"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:70%;height:6px;border-radius:100px"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        <i
          class="anticon anticon-cross-circle"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-small"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:100%;height:6px;border-radius:100px"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        <i
          class="anticon anticon-check-circle"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="check-circle"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 0C229.2 0 0 229.2 0 512s229.2 512 512 512 512-229.2 512-512S794.8 0 512 0zm260.3 356.4L412.8 717.1l-.4.4c-2.4 2.6-5.3 4.9-8.5 6.7-5.6 3.2-11.8 4.7-17.8 4.7-12.5 0-24.7-6.5-31.3-18.2L245.9 520.3C236 503 242 481 259.3 471.2c17.3-9.9 39.3-3.9 49.1 13.4l85.4 149.5 327.5-328.5c14-14.1 36.8-14.1 50.9-.1 14.1 14.1 14.1 36.9.1 50.9z"
            />
          </svg>
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/linecap.md correctly 1`] = `
<div>
  <div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div>
      <div
        class="ant-progress-outer"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg"
            style="width:75%;height:8px;border-radius:0"
          />
        </div>
      </div>
      <span
        class="ant-progress-text"
      >
        75%
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#108ee9"
          stroke-linecap="square"
          stroke-width="6"
          style="stroke-dasharray:221.48228207808043px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        75%
      </span>
    </div>
  </div>
  <div
    class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default"
  >
    <div
      class="ant-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="ant-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="ant-progress-circle-trail"
          d="M 50,50 m 0,47
     a 47,47 0 1 1 0,-94
     a 47,47 0 1 1 0,94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:220.30970943744057px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="ant-progress-circle-path"
          d="M 50,50 m 0,47
     a 47,47 0 1 1 0,-94
     a 47,47 0 1 1 0,94"
          fill-opacity="0"
          stroke="#108ee9"
          stroke-linecap="square"
          stroke-width="6"
          style="stroke-dasharray:165.23228207808043px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="ant-progress-text"
      >
        75%
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/segment.md correctly 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div>
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width:60%;height:8px;border-radius:100px"
        />
        <div
          class="ant-progress-success-bg"
          style="width:30%;height:8px;border-radius:100px"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
    >
      60%
    </span>
  </div>
</div>
`;
